<resources>
    <string name="app_name">JavaDevelopment</string>
    <string name="list_users">List users</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="add_user">Add user</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_height">Enter height</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_age">Enter age</string>
    <string name="save">Save</string>
</resources>