<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:text="@string/list_users"
       android:textSize="24sp"
       android:textStyle="bold" />


   <TableRow
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/table_background"
       android:padding="10dp">

      <TextView
          style="@style/tableHeader"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/no" />

      <TextView
          style="@style/tableHeader"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:text="@string/name" />

      <TextView
          style="@style/tableHeader"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/height"
          android:textAlignment="center" />

      <TextView
          style="@style/tableHeader"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/weight"
          android:textAlignment="center" />

      <TextView
          style="@style/tableHeader"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/age"
          android:textAlignment="center" />
   </TableRow>



   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/listUsers"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>

      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:layout_width="45dp"
          android:layout_height="45dp"
          android:layout_alignParentBottom="true"
          android:layout_alignParentEnd="true"
          android:layout_margin="20dp"
          android:contentDescription="TODO" />

   </RelativeLayout>




</LinearLayout>