<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/tbnExit"
            android:layout_width="40dp"
            android:layout_height="34dp"
            android:background="@null"
            android:src="@drawable/back"/>

        <TextView
            style="@style/title"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_full_name" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:padding="10dp" />

        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_height" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:padding="10dp"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_weight" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:padding="10dp"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enter_age" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_border"
            android:padding="10dp"
            android:inputType="number"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:backgroundTint="@color/red"/>

</LinearLayout>